@@ -21,37 +21,61 @@ False = 0
 class LoggedSequence(Sequence):
     def __init__(self, **kwargs):
         Sequence.__init__(self, **kwargs)
-        self.logfile        = None
-        self.error_log_name = kwargs.get('error_logfile')
-        self.global_data    = None
+        self.logfile              = None
+        self.logfile_mode         = 'a'
+        self.logfile_handle       = None
+        self.error_logfile        = None
+        self.error_logfile_mode   = 'a'
+        self.error_logfile_handle = None
         if kwargs.get('overwrite_log'):
-            self.log_mode = 'w'
-        else:
-            self.log_mode = 'a'
+            self.logfile_mode       = 'w'
+            self.error_logfile_mode = 'w'
         if kwargs.has_key('logfile'):
-            self.logfile = open(kwargs.get('logfile'), self.log_mode)
+            self.set_logfile(kwargs.get('logfile'),
+                             kwargs.get('overwrite_log'))
+        if kwargs.has_key('error_logfile'):
+            self.set_error_logfile(kwargs.get('error_logfile'),
+                                   kwargs.get('overwrite_log'))
         for action in self.actions:
             action.signal_connect('data_received', self._on_action_data_received)
             action.signal_connect('notify',        self._on_action_notify)
 
 
-    def _log(self, logfile, data):
-        if logfile is None:
+    def set_logfile(self, name, overwrite = False):
+        if self.logfile_handle is not None:
+            self.logfile_handle.close()
+            self.logfile_handle = None
+        self.logfile      = name
+        self.logfile_mode = overwrite and 'w' or 'a'
+
+
+    def set_error_logfile(self, name, overwrite = False):
+        if self.error_logfile_handle is not None:
+            self.error_logfile_handle.close()
+            self.error_logfile_handle = None
+        self.error_logfile      = name
+        self.error_logfile_mode = overwrite and 'w' or 'a'
+
+
+    def _log(self, data):
+        if self.logfile is None:
             return
+        if self.logfile_handle is None:
+            self.logfile_handle = open(self.logfile, self.logfile_mode)
         try:
-            logfile.write(data)
-            logfile.flush()
+            self.logfile_handle.write(data)
+            self.logfile_handle.flush()
         except:
-            print 'Error while writing to logfile (%s)' % logfile.name
+            print 'Error while writing to logfile (%s)' % self.logfile
 
 
     def _on_action_data_received(self, data):
-        self._log(self.logfile, data)
+        self._log(data)
         self.signal_emit('data_received', data)
 
 
     def _on_action_notify(self, data):
-        self._log(self.logfile, 'NOTIFICATION: %s\n' % data)
+        self._log('NOTIFICATION: %s\n' % data)
         self.signal_emit('notify', data)
 
 
@@ -65,14 +89,13 @@ class LoggedSequence(Sequence):
         assert global_lock is not None
         assert global_data is not None
         assert local_data  is not None
-        self.global_data = global_data
         try:
             for action in self.actions:
                 action.debug = self.debug
                 if not action.execute(global_lock, global_data, local_data):
                     return False
         except Exception:
-            log = open(self.error_log_name, self.log_mode)
+            log = open(self.error_logfile, self.error_logfile_mode)
             traceback.print_exc(None, log)
             log.close()
             raise
